Fix image alignment for images in 'Mockups #1'

--- a/assets/css/ux-design-projects/bakery-board.css
+++ b/assets/css/ux-design-projects/bakery-board.css
@@ -329,6 +329,12 @@ img.mobile-wireframes:first-child {
   max-width: 300px;
 }
 
+/* Mockups #2 */
+.refined-mockups-1-image-container-2 .mockups {
+  /* border: 3px solid red; */
+  max-width: 400px;
+}
+
 /* Down arrow */
 .down-arrow {
   font-size: 100px;
@@ -701,8 +707,7 @@ img.mobile-wireframes:first-child {
   /* ----- Refined mockups ----- */
   .refined-mockups-1 .image-container, .refined-mockups-2 .image-container {
     flex-direction: row;
-    gap: 32px;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
   }
 
@@ -966,17 +971,6 @@ img.mobile-wireframes:first-child {
     width: 44%;
   }
 
-  /* Mockups #2 */
-  .refined-mockups-1 .mockups-2 {
-    /* border: 3px solid red; */
-    max-width: 400px;
-  }
-
-  /* .refined-mockups-1 .refined-mockups-1-image-container-2 {
-    justify-content: center;
-    gap: 28px;
-  } */
-
   .right-arrow {
     font-size: 75px;
   }
@@ -1177,7 +1171,7 @@ img.mobile-wireframes:first-child {
 
   .refined-mockups-1 .refined-mockups-1-image-container {
     /* border: 3px solid red; */
-    /* justify-content: space-evenly; */
+    justify-content: space-evenly;
   }
 
   .hifi-prototype-1 .image-container, .hifi-prototype-2 .image-container {
